# proximity

./: .coveragerc  CHANGELOG.md  LICENSE  README.md  dev.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.py
.circleci/: config.yml
.github/: dependabot.yml
doc/: conf.py  index.md
proximity/: __init__.py  convenience.py  mock_trimesh.py  test_convenience.py
