[tool.poetry]
name = "proximity"
version = "0.3.0"
description = "Mesh proximity queries based on libspatialindex and rtree, extracted from Trimesh"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Michael Dawson-Haggerty, Metabolize, Minnow Software, and other contributors"]
license = "MIT"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://ounce.readthedocs.io/en/stable/"
repository = "https://github.com/lace/ounce"
documentation = "https://ounce.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
numpy = "*"
scipy = "*"
polliwog = "1.0.0b14"
rtree = "0.9.7"
vg = ">=1.11.1"

[tool.poetry.dev-dependencies]
black = "21.6b0"
click = "8.0.1"
coverage = "5.5"
executor = "23.2"
flake8 = "3.9.2"
flake8-import-order = "0.18.1"
lacecore = "0.10.0"
myst-parser = "0.15.1"
pytest = "6.2.4"
pytest-cov = "2.12.1"
Sphinx = "4.1.0"
sphinxcontrib-apidoc = "0.3.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100.0
omit = ["**/test_*.py", "**/vendor/*.py"]
