[tool.poetry]
name = "proximity"
version = "2.0.0"
description = "Mesh proximity queries based on libspatialindex and rtree, extracted from Trimesh"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Michael Dawson-Haggerty, Metabolize, Minnow Software, and other contributors"]
license = "MIT"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://proximity.readthedocs.io/en/stable/"
repository = "https://github.com/lace/proximity"
documentation = "https://proximity.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
numpy = "*"
polliwog = ">=3.0.0a0,<4.0.0"
rtree = "1.0.1"
scipy = "*"
vg = ">=2.0.0"

[tool.poetry.dev-dependencies]
black = "22.10.0"
click = "8.1.3"
coverage = "6.5.0"
executor = "23.2"
flake8 = "5.0.4"
flake8-import-order = "0.18.2"
lacecore = "3.0.0a1"
myst-parser = "0.18.1"
pytest = "7.2.0"
pytest-cov = "4.0.0"
Sphinx = "4.3.2"
sphinxcontrib-apidoc = "0.3.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100.0
omit = ["**/test_*.py", "**/vendor/*.py"]
